--- a/FbTestApp/Base.lproj/Main.storyboard
+++ b/FbTestApp/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ycD-Ls-k25">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -57,6 +58,114 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="36" y="37.331334332833585"/>
+        </scene>
+        <!--User Info View Controller-->
+        <scene sceneID="OZf-oZ-Yvc">
+            <objects>
+                <viewController storyboardIdentifier="UserInfoViewController" id="2FV-xh-K8n" customClass="UserInfoViewController" customModule="FbTestApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WD2-2y-RzG"/>
+                        <viewControllerLayoutGuide type="bottom" id="pK1-jL-UtZ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zLj-jE-L5M">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TWZ-EG-0cI">
+                                <rect key="frame" x="16" y="90" width="118" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="118" id="FHP-or-qbA"/>
+                                    <constraint firstAttribute="height" constant="140" id="oON-cS-pAD"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hw3-Wy-hUh">
+                                <rect key="frame" x="149" y="99" width="210" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23" id="HdF-vH-Ios"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="birthdate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="byD-xo-zJ3">
+                                <rect key="frame" x="149" y="128" width="210" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23" id="4Im-fp-nN9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="gender" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lcs-hM-k3C">
+                                <rect key="frame" x="149" y="155" width="210" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23" id="rZm-Fj-Hk0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UF1-ef-Lk0">
+                                <rect key="frame" x="281" y="617" width="78" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="8pU-gV-2fo"/>
+                                    <constraint firstAttribute="width" constant="78" id="YYQ-zv-XsX"/>
+                                </constraints>
+                                <state key="normal" title="Log Out"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="place" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xGD-Y2-cyH">
+                                <rect key="frame" x="149" y="186" width="210" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23" id="alV-TT-Oaf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lcs-hM-k3C" firstAttribute="top" secondItem="byD-xo-zJ3" secondAttribute="bottom" constant="4" id="1Ip-b2-fA2"/>
+                            <constraint firstItem="hw3-Wy-hUh" firstAttribute="leading" secondItem="TWZ-EG-0cI" secondAttribute="trailing" constant="15" id="2yD-ii-ZYV"/>
+                            <constraint firstItem="TWZ-EG-0cI" firstAttribute="leading" secondItem="zLj-jE-L5M" secondAttribute="leadingMargin" id="57s-Y9-VgI"/>
+                            <constraint firstItem="xGD-Y2-cyH" firstAttribute="trailing" secondItem="zLj-jE-L5M" secondAttribute="trailingMargin" id="6Ai-xk-bUK"/>
+                            <constraint firstItem="TWZ-EG-0cI" firstAttribute="top" secondItem="WD2-2y-RzG" secondAttribute="bottom" constant="26" id="F8O-86-M1U"/>
+                            <constraint firstItem="lcs-hM-k3C" firstAttribute="leading" secondItem="TWZ-EG-0cI" secondAttribute="trailing" constant="15" id="I5R-yI-su1"/>
+                            <constraint firstItem="hw3-Wy-hUh" firstAttribute="trailing" secondItem="zLj-jE-L5M" secondAttribute="trailingMargin" id="NiC-QI-HA2"/>
+                            <constraint firstItem="hw3-Wy-hUh" firstAttribute="top" secondItem="WD2-2y-RzG" secondAttribute="bottom" constant="35" id="VzW-rw-mOi"/>
+                            <constraint firstItem="xGD-Y2-cyH" firstAttribute="leading" secondItem="TWZ-EG-0cI" secondAttribute="trailing" constant="15" id="Vzg-9j-tfl"/>
+                            <constraint firstItem="lcs-hM-k3C" firstAttribute="trailing" secondItem="zLj-jE-L5M" secondAttribute="trailingMargin" id="cQk-VW-Zg4"/>
+                            <constraint firstItem="xGD-Y2-cyH" firstAttribute="top" secondItem="lcs-hM-k3C" secondAttribute="bottom" constant="8" id="g17-c5-Vkh"/>
+                            <constraint firstItem="byD-xo-zJ3" firstAttribute="top" secondItem="hw3-Wy-hUh" secondAttribute="bottom" constant="6" id="iXP-EA-eis"/>
+                            <constraint firstItem="byD-xo-zJ3" firstAttribute="leading" secondItem="TWZ-EG-0cI" secondAttribute="trailing" constant="15" id="luJ-m2-IMy"/>
+                            <constraint firstItem="UF1-ef-Lk0" firstAttribute="trailing" secondItem="zLj-jE-L5M" secondAttribute="trailingMargin" id="pbM-ue-NqY"/>
+                            <constraint firstItem="pK1-jL-UtZ" firstAttribute="top" secondItem="UF1-ef-Lk0" secondAttribute="bottom" constant="20" id="vs3-4z-c6O"/>
+                            <constraint firstItem="byD-xo-zJ3" firstAttribute="trailing" secondItem="zLj-jE-L5M" secondAttribute="trailingMargin" id="yJ4-j2-RT1"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="tuI-J8-iAh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pdL-eo-3r6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="36" y="721.88905547226398"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="jtn-um-uun">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ycD-Ls-k25" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aPC-qK-bhb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2FV-xh-K8n" kind="relationship" relationship="rootViewController" id="Hja-p9-ntm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hMq-OA-k48" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-734" y="722"/>
         </scene>
     </scenes>
     <resources>
