--- a/FbTestApp/Base.lproj/Main.storyboard
+++ b/FbTestApp/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
                                     <action selector="logoutButtonTapped:" destination="2FV-xh-K8n" eventType="touchUpInside" id="COF-ZB-5pk"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="place" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xGD-Y2-cyH">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xGD-Y2-cyH">
                                 <rect key="frame" x="129" y="275" width="229" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="Bol-TK-Fue"/>
